fixed photo gallery alignment

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -116,6 +116,10 @@ body {
   align-items: center;
   margin-bottom: 75px;
 
+  @media (max-width: 920px) {
+    margin-bottom: 120px;
+  }
+
   @media (max-width: 820px) {
     height: 100%;
   }
@@ -317,6 +321,10 @@ body {
 
 .column {
   padding: 0 20px;
+
+  @media (max-width: 920px) {
+    margin: 0 auto;
+  }
 
   & > a {
     display: block;
